src/logs/error/info-2023-05-21.log
2023-05-21 07:21:46 error: [POST] /auth/login >> StatusCode:: 400, Message:: Cannot read properties of undefined (reading 'status')
2023-05-21 07:22:08 error: [POST] /auth/login >> StatusCode:: 400, Message:: Cannot read properties of undefined (reading 'status')
2023-05-21 07:23:02 error: [POST] /bid/6469b8821d48527e24fc9ef7 >> StatusCode:: 400, Message:: Cannot read properties of null (reading 'nips')
2023-05-21 07:25:36 error: [POST] /auth/login >> StatusCode:: 400, Message:: Cannot read properties of undefined (reading 'status')
2023-05-21 07:26:06 error: [POST] /chat >> StatusCode:: 400, Message:: Chat validation failed: milestone: Path `milestone` is required.
2023-05-21 07:27:12 error: [POST] /chat >> StatusCode:: 400, Message:: CHAT_VALIDATION_ERROR
2023-05-21 07:29:41 error: [POST] /chat >> StatusCode:: 400, Message:: Chat validation failed: milestone: Path `milestone` is required.
2023-05-21 07:32:30 error: [POST] /chat/message >> StatusCode:: 400, Message:: Message validation failed: milestone: Path `milestone` is required.
2023-05-21 07:34:54 error: [GET] /chat/user/ >> StatusCode:: 400, Message:: Cast to ObjectId failed for value "user" (type string) at path "_id" for model "Chat"
2023-05-21 07:46:12 error: [POST] /chat/message >> StatusCode:: 400, Message:: All required fields cannot be empty
2023-05-21 07:47:21 error: [POST] /chat/message >> StatusCode:: 400, Message:: Chat id cannot be empty
2023-05-21 07:48:58 error: uncaughtException: Unexpected token 'const'
/Users/olashina/Documents/workspace/NIPTREX-backend/src/services/chat.service.ts:71
            const chatData = await this.getChatById(chat);
            ^^^^^

SyntaxError: Unexpected token 'const'
    at Object.compileFunction (node:vm:360:18)
    at wrapSafe (node:internal/modules/cjs/loader:1084:15)
    at Module._compile (node:internal/modules/cjs/loader:1119:27)
    at Module._compile (/Users/olashina/Documents/workspace/NIPTREX-backend/node_modules/source-map-support/source-map-support.js:568:25)
    at Module.m._compile (/private/var/folders/7y/g7wt7_g17x58s0b1kmllks7m0000gn/T/ts-node-dev-hook-5514092519473506.js:69:33)
    at Module._extensions..js (node:internal/modules/cjs/loader:1209:10)
    at require.extensions..jsx.require.extensions..js (/private/var/folders/7y/g7wt7_g17x58s0b1kmllks7m0000gn/T/ts-node-dev-hook-5514092519473506.js:114:20)
    at require.extensions.<computed> (/private/var/folders/7y/g7wt7_g17x58s0b1kmllks7m0000gn/T/ts-node-dev-hook-5514092519473506.js:71:20)
    at Object.nodeDevHook [as .ts] (/Users/olashina/Documents/workspace/NIPTREX-backend/node_modules/ts-node-dev/lib/hook.js:63:13)
    at Module.load (node:internal/modules/cjs/loader:1033:32)
2023-05-21 07:49:42 error: uncaughtException: тип Unable to compile TypeScript:
src/services/chat.service.ts(118,3): error TS1128: Declaration or statement expected.

Error: тип Unable to compile TypeScript:
src/services/chat.service.ts(118,3): error TS1128: Declaration or statement expected.

    at Object.<anonymous> (/Users/olashina/Documents/workspace/NIPTREX-backend/src/services/chat.service.ts:1:7)
    at Module._compile (node:internal/modules/cjs/loader:1155:14)
    at Module._compile (/Users/olashina/Documents/workspace/NIPTREX-backend/node_modules/source-map-support/source-map-support.js:568:25)
    at Module.m._compile (/private/var/folders/7y/g7wt7_g17x58s0b1kmllks7m0000gn/T/ts-node-dev-hook-5514092519473506.js:69:33)
    at Module._extensions..js (node:internal/modules/cjs/loader:1209:10)
    at require.extensions..jsx.require.extensions..js (/private/var/folders/7y/g7wt7_g17x58s0b1kmllks7m0000gn/T/ts-node-dev-hook-5514092519473506.js:114:20)
    at require.extensions.<computed> (/private/var/folders/7y/g7wt7_g17x58s0b1kmllks7m0000gn/T/ts-node-dev-hook-5514092519473506.js:71:20)
    at Object.nodeDevHook [as .ts] (/Users/olashina/Documents/workspace/NIPTREX-backend/node_modules/ts-node-dev/lib/hook.js:63:13)
    at Module.load (node:internal/modules/cjs/loader:1033:32)
    at Function.Module._load (node:internal/modules/cjs/loader:868:12)
